@@ -1,3 +1,10 @@
+1999-11-08  Tor Lillqvist  <tml@iki.fi>
+
+	* gdk/win32/gdkdraw.c
+	* gdk/win32/gdkfont.c
+	* gdk/win32/gdkgc.c: Various minor cleanups and bugfixes
+	following yesterday's changes. (Unrelated to Owen's reorg.)
+
 Mon Nov  8 16:18:25 1999  Owen Taylor  <otaylor@redhat.com>
 
 	* gdk/x11/gdkinput-gxi.c: Add missing include,
